--- a/src/styles.css
+++ b/src/styles.css
@@ -110,22 +110,24 @@ td {
   text-align: center !important;
 }
 
+
+/* ======== Loader ======== */
 .loader {
     width: 48px;
     height: 48px;
-    border: 5px solid rgb(26, 24, 24);
+    border: 5px solid #e54624;
     border-radius: 50%;
     display: inline-block;
     box-sizing: border-box;
     position: relative;
     animation: pulse 1s linear infinite;
-  }
+}
 .loader:after {
     content: '';
     position: absolute;
     width: 48px;
     height: 48px;
-    border: 5px solid rgb(70, 70, 70);
+    border: 5px solid #f89782;
     border-radius: 50%;
     display: inline-block;
     box-sizing: border-box;
@@ -144,7 +146,8 @@ td {
     0% , 60% , 100%{ transform:  scale(1) }
     80% { transform:  scale(1.2)}
 }
-  
+/* ======== Loader ======== */
+
 
 
 
