--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,8 +11,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ">
-          <li class="nav-item"><a routerLink="books/list" class="nav-link">Home</a></li>
-          <li class="nav-item"><a routerLink="exchange" class="nav-link">Exchange</a></li>
+          <li class="nav-item"><a routerLink="/books/list" class="nav-link">Home</a></li>
+          <li class="nav-item"><a routerLink="/exchange" class="nav-link">Exchange</a></li>
           <li class="nav-item"><a class="nav-link">About</a></li>
           <li class="nav-item"><a class="nav-link">Contact</a></li>
         </ul>
@@ -24,8 +24,8 @@
             <span class="me-3">roles</span>
           </div>
           <div class="pt-3 pt-md-0 d-flex">
-            <a class="btn btn-primary me-2">Login</a>
-            <a class="btn btn-primary ">Register</a>
+            <a class="btn btn-primary me-2" routerLink="/login">Login</a>
+            <a class="btn btn-primary " routerLink="/register">Register</a>
             <div *ngIf="loggedIn">
               <a class="btn btn-outline-secondary me-1"><i class="bi bi-cart4"></i></a>
               <a class="btn btn-outline-primary me-2"><i class="bi bi-person-circle"></i> My Profile</a>
