--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,10 +18,10 @@
         </ul>
         <div class="ms-auto d-md-flex">
           <div class="pt-2 pt-sm-0 align-self-center text-muted" *ngIf="loggedIn">
-            <span class="">Logged in as:</span>
-            <span class="me-2">username</span>
-            <span class="">User roles:</span>
-            <span class="me-3">roles</span>
+            <span class="">Logged in as: </span>
+            <span class="me-2">{{authService.currentUser.username}}</span>
+            <span class="">User roles: </span>
+            <span class="me-3">{{authService.currentUser.roles}}</span>
           </div>
           <div class="pt-3 pt-md-0 d-flex">
             <a *ngIf="!loggedIn" class="btn btn-primary me-2" routerLink="/login">Login</a>
