--- a/src/app/books/book-list/book-list.component.html
+++ b/src/app/books/book-list/book-list.component.html
@@ -1,4 +1,5 @@
 <app-loader *ngIf="isLoading"></app-loader>
+<app-book-form *ngIf="isAdding" [editMode]="false" (modalClose)="onCloseModal()"></app-book-form>
 <section class="p-0 pt-3 p-sm-5 text-center text-md-start" *ngIf="!isError && !isLoading">
     <div class="container" id="book-container">
         <div>
@@ -90,7 +91,7 @@
         <div class="pb-3">
             <div sec:authorize="hasRole('ADMIN')" class="col p-5 mt-3 text-center" style="border: dashed; border-width: thin; border-color: darkgray; border-radius: 3px;">
                 <h4>
-                    <a class="text-muted text-decoration-none p-5 mb-3" th:href="@{/books/add}">+ Add a book</a>
+                    <a class="text-muted text-decoration-none p-5 mb-3" (click)="onOpenModal()" style="cursor: pointer;">+ Add a book</a>
                 </h4>
             </div>
         </div>
