--- a/src/app/home/books/book-list/book-list.component.html
+++ b/src/app/home/books/book-list/book-list.component.html
@@ -89,7 +89,7 @@
             </li>
         </ul>
         <div class="pb-3">
-            <div sec:authorize="hasRole('ADMIN')" class="col p-5 mt-3 text-center" style="border: dashed; border-width: thin; border-color: darkgray; border-radius: 3px;">
+            <div sec:authorize="hasRole('ADMIN')" class="bg-white col p-5 mt-3 text-center" style="border: dashed; border-width: thin; border-color: darkgray; border-radius: 3px;">
                 <h4>
                     <a class="text-muted text-decoration-none p-5 mb-3" (click)="onOpenModal()" style="cursor: pointer;">+ Add a book</a>
                 </h4>
