--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <app-header></app-header>
-<body class="bg-light">
+<div class="bg-light">
     <div class="container">
     
         <router-outlet></router-outlet>
     
     </div>
-</body>
- <!-- <app-footer></app-footer> -->
+</div>
+<app-footer></app-footer>
