fixed footer height

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="bg-custom-orange">
+<div class="bg-custom-orange" id="login-bs">
 
 <!--    <div th:replace="fragments/common :: nav"></div>-->
 
