--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,8 +1,3 @@
-html {
-    height: 100%;
-}
-body {
-    min-height: 100%;
-    display: flex;
-    flex-direction: row;
+#app-body {
+    min-height: 100vh;
 }
