--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="bg-light">
+<div id="app-body" class="bg-light">
     <div class="container">
     
         <router-outlet></router-outlet>
