add create reviews

--- a/src/app/home/books/book-form/book-form.component.html
+++ b/src/app/home/books/book-form/book-form.component.html
@@ -51,8 +51,8 @@
                         <!-- <div class="col-12">
                             <label class="form-label">Long Description <small class="text-muted">(max chars: 500)</small></label>
                             <textarea th:field="${book.bookDetail.longDesc}" type="text" maxlength="500" id="longdesc" class="form-control" placeholder="Long description for the book"></textarea>
-                        </div> -->
-                        <!-- <div class="col-md-6">
+                        </div>
+                        <div class="col-md-6">
                             <label class="form-label">Page Count</label>
                             <input th:field="${book.bookDetail.pageCount}" type="text"  id="pagecount" class="form-control" placeholder="Page Count">
                         </div>
@@ -63,7 +63,7 @@
                         <div class="col-12">
                             <label class="form-label">Tags <small class="text-muted">(separated by commas)</small></label>
                             <input th:field="${book.bookDetail.tags}" type="text"  id="tags" class="form-control" placeholder="Ex. tag1,tag2,tag3">
-                        </div> -->
+                        </div>  -->
                     </div>
                     <div class="col-12">
                         <label class="form-label">Image URL</label>
