--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -27,7 +27,7 @@
             <a *ngIf="!loggedIn" class="btn btn-primary me-2" routerLink="/login">Login</a>
             <a *ngIf="!loggedIn" class="btn btn-primary " routerLink="/register">Register</a>
             <div *ngIf="loggedIn">
-              <a class="btn btn-outline-secondary me-1"><i class="bi bi-cart4"></i></a>
+              <a class="btn btn-outline-secondary me-1" routerLink="/cart"><i class="bi bi-cart4"></i></a>
               <a class="btn btn-outline-primary me-1"><i class="bi bi-person-circle"></i> My Profile</a>
               <a *ngIf="isAdmin" class="btn btn-outline-primary me-2"><i class="bi bi-person-circle"></i> Admin Panel</a>
             </div>
