--- a/ui/src/app/toast/toast.component.html
+++ b/ui/src/app/toast/toast.component.html
@@ -1,7 +1,7 @@
-<div class="bs-toast alert p-3 col-12 col-sm-4" [ngClass]="{'alert-danger': type === 'danger', 'alert-info': type === 'info'}">
+<div class="bs-toast alert p-3 col-12 col-sm-4" [ngClass]="{'alert-danger': type === 'danger', 'alert-info': type === 'info', 'alert-success': type === 'success'}">
     <div class="d-flex align-items-top">
         <span class="bi bi-info-circle me-2"></span>
-        Lorem ipsum dolor sit amet 
+        {{message}}
         <button class="ms-auto btn btn-close"></button>
     </div>
 </div>
