--- a/ui/src/app/home/cart/cart.component.html
+++ b/ui/src/app/home/cart/cart.component.html
@@ -1,10 +1,11 @@
+<app-toast [type]="toastType" *ngIf="showToast" [message]="toastMessage"></app-toast>
 <section class="p-0 pt-5 p-sm-5 text-center text-md-start">
     <div class="container" id="cart-container">
         <ul class="list-group">
             <li class="list-group-item bg-light">
                 <h4>
                     <span><i class="bi bi-cart4"></i></span>
-                    <span class="p-0 text-start m-0">Your cart (3)</span>
+                    <span class="p-0 text-start m-0">Your cart ({{cart.length}})</span>
                 </h4>
             </li>
             <li *ngIf="cart.length===0" class="list-group-item bg-light">
@@ -38,9 +39,9 @@
                             <div class="d-sm-flex mt-1">
                                 <h5 class="p-0 m-0">Item Price: <span>${{item.price}}</span>
                                 </h5>
-                                <a class="ms-auto btn btn-secondary btn-sm" th:href="@{/user/{user}/remove-from-cart(user=${#authentication.name},id=${cartItem.id})}">
+                                <button class="ms-auto btn btn-secondary btn-sm" (click)="onRemoveFromCart(item.id!)">
                                     <i class="bi bi-cart-x"></i> Remove from cart
-                                </a>
+                                </button>
                             </div>
                         </div>
                     </div>
