--- a/ui/src/app/header/header.component.html
+++ b/ui/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="container">
       <div class="navbar-brand fw-bold text-custom-orange d-flex">
         <div class="d-flex align-items-center" style="cursor: pointer;">
-          <img alt="" class="" width="40" height="40">
+          <img src="assets/logotest2or.png" class="" width="40" height="40">
           <div class="ms-2">bookstore-springboot</div>
         </div>
       </div>
