--- a/ui/src/app/home/books/book-detail/book-detail.component.html
+++ b/ui/src/app/home/books/book-detail/book-detail.component.html
@@ -30,100 +30,98 @@
                         <a sec:authorize="hasRole('ADMIN')" (click)="isEditing = true" class="btn btn-custom-orange  ms-auto">Edit</a>
                     </div>
                 </li>
-                <li class="list-group-item m-0 p-0">
-                    <div class="bg-white ">
-                        <div class="d-md-flex">
-                            <div class="border-end">
-                                <img class="m-3" [src]="book.imgPath" width="200" height="300">
-                                <div class="mx-3">
-                                    <div class="col">
-                                        <strong>ISBN: </strong><span th:text="${book.bookDetail.isbn}">{{book.bookDetail?.isbn}}</span>
-                                    </div>
-                                    <div class="mt-2 d-flex justify-content-center justify-content-md-start">
-                                        <span>Buy new: &nbsp;</span>
-                                        <h4 th:text="|$${book.price}|">${{book.price}}</h4>
-                                    </div>
-                                    <div class="col mt-2 ">
-                                        <a class="btn btn-primary w-100 rounded-pill" (click)="onAddToCart()" >Add to Cart</a>
-                                    </div>
-                                    <div class="col mt-1 mb-2">
-                                        <a th:href="@{'/user/'+${#authentication.name}+'/buyNow'(id=${book.id})}" class="btn btn-warning w-100 rounded-pill">Buy now</a>
-                                    </div>
-                                    <div th:if="${itemOwned}" class="col mt-3 mb-3 text-center">
-                                        <span class="text-success"><i class="bi bi-check-lg"></i> You own this product</span>
-                                    </div>
-                                    <div th:if="${book.addedBy.userName == #authentication.name}" class="col mt-3 mb-3 text-center">
-                                        <span class="text-custom-orange"><i class="bi bi-plus-circle"></i> You have added this book</span>
-                                    </div>
+                <li class="list-group-item bg-white m-0 p-0">
+                    <div class="d-md-flex">
+                        <div class="border-end">
+                            <img class="m-3" [src]="book.imgPath" width="200" height="300">
+                            <div class="mx-3">
+                                <div class="col">
+                                    <strong>ISBN: </strong><span th:text="${book.bookDetail.isbn}">{{book.bookDetail.isbn}}</span>
+                                </div>
+                                <div *ngIf="!bookOwned" class="mt-2 d-flex justify-content-center justify-content-md-start">
+                                    <span>Buy new: &nbsp;</span>
+                                    <h4 th:text="|$${book.price}|">${{book.price}}</h4>
+                                </div>
+                                <div class="col mt-2 ">
+                                    <a class="btn btn-primary w-100 rounded-pill" (click)="onAddToCart()" *ngIf="!bookOwned">Add to Cart</a>
+                                </div>
+                                <div class="col mt-1 mb-2">
+                                    <a th:href="@{'/user/'+${#authentication.name}+'/buyNow'(id=${book.id})}" class="btn btn-warning w-100 rounded-pill" *ngIf="!bookOwned">Buy now</a>
+                                </div>
+                                <div th:if="${itemOwned}" class="col mt-3 mb-3 text-center">
+                                    <span class="text-success" *ngIf="bookOwned"><i class="bi bi-check-lg"></i> You own this product</span>
+                                </div>
+                                <!-- <div th:if="${book.addedBy.userName == #authentication.name}" class="col mt-3 mb-3 text-center">
+                                    <span class="text-custom-orange"><i class="bi bi-plus-circle"></i> You have added this book</span>
+                                </div> -->
+                            </div>
+                        </div>
+                        <div class="d-flex flex-column justify-content-between">
+                            <div>
+                                <h3 class="m-3">
+                                    <span th:text="${book.title}">{{book.title}} </span>
+                                    <span class="fst-italic fw-light">by <span th:text="${book.author}">{{book.author}}</span></span>
+                                </h3>
+
+                                <div class="col m-3 text-start">
+                                    <p style="white-space: pre-line;" th:text="${book.bookDetail.longDesc}">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                        Inventore accusantium possimus veritatis consequatur esse temporibus
+                                        quaerat,
+                                        commodi iusto perferendis beatae. Veniam nemo odio ipsam possimus.
+                                        Consequatur labore nulla sapiente architecto!
+                                    </p>
                                 </div>
                             </div>
-                            <div class="d-flex flex-column justify-content-between">
-                                <div>
-                                    <h3 class="m-3">
-                                        <span th:text="${book.title}">{{book.title}} </span>
-                                        <span class="fst-italic fw-light">by <span th:text="${book.author}">{{book.author}}</span></span>
-                                    </h3>
 
-                                    <div class="col m-3 text-start">
-                                        <p style="white-space: pre-line;" th:text="${book.bookDetail.longDesc}">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                            Inventore accusantium possimus veritatis consequatur esse temporibus
-                                            quaerat,
-                                            commodi iusto perferendis beatae. Veniam nemo odio ipsam possimus.
-                                            Consequatur labore nulla sapiente architecto!
-                                        </p>
-                                    </div>
-                                </div>
-
-                                <div class="">
-                                    <h4 class="col m-3 ">Book Details</h4>
-                                    <div class="col m-3 text-start">
+                            <div class="">
+                                <h4 class="col m-3 ">Book Details</h4>
+                                <div class="col m-3 text-start">
 
 
-                                        <ul>
-                                            <li th:if="${book.addedBy.roles != 'ROLE_ADMIN'}" class="py-1">
-                                                <strong>Added by:</strong> <a th:href="@{'/user/' + ${book.addedBy.userName}}" th:text="|${book.addedBy.firstName} ${book.addedBy.lastName}|">Firstname Lastname</a>
-                                            </li>
-                                            <li class="py-1">
-                                                <strong>Publisher:</strong> <span th:text="${book.bookDetail.publisher}">{{book.bookDetail?.publisher}}</span>
-                                            </li>
-                                            <li class="py-1">
-                                                <strong>Language:</strong> <span th:text="${book.bookDetail.language}">English</span>
-                                            </li>
-                                            <li class="py-1">
-                                                <strong>Page Count:</strong> <span th:text="|${book.bookDetail.pageCount} pages|">325 pages</span>
-                                            </li>
-                                            <li class="py-1">
-                                                <strong>Item Weight:</strong> <span th:text="|${book.bookDetail.itemWeight} pounds|">1.56 pounds</span>
-                                            </li>
-                                            <li class="py-1">
-                                                <div class="d-flex">
-                                                    <div class="align-self-center">
-                                                        <strong>Avg. Rating:</strong>
-                                                        <span>Is logged in: {{authService.isLoggedIn()}}</span>
-                                                    </div>
-                                                    <div class="ps-2">
-                                                        <a th:if="${avgRating == 0}" class="text-warning fs-5 text-decoration-none" href="#reviews"><div th:replace="fragments/elements :: 0-star"></div></a>
-                                                        <a th:if="${avgRating >= 1 and avgRating < 2}" class="text-warning fs-5 text-decoration-none" href="#reviews"><div th:replace="fragments/elements :: 1-star"></div></a>
-                                                        <a th:if="${avgRating >= 2 and avgRating < 3}" class="text-warning fs-5 text-decoration-none" href="#reviews"><div th:replace="fragments/elements :: 2-star"></div></a>
-                                                        <a th:if="${avgRating >= 3 and avgRating < 4}" class="text-warning fs-5 text-decoration-none" href="#reviews"><div th:replace="fragments/elements :: 3-star"></div></a>
-                                                        <a th:if="${avgRating >= 4 and avgRating < 5}" class="text-warning fs-5 text-decoration-none" href="#reviews"><div th:replace="fragments/elements :: 4-star"></div></a>
-                                                        <a th:if="${avgRating == 5}" class="text-warning fs-5 text-decoration-none" href="#reviews"><div th:replace="fragments/elements :: 5-star"></div></a>
-                                                    </div>
-                                                    <span th:text="|(${avgRating})|" class="ps-2 align-self-center">(4.5)</span>
+                                    <ul>
+                                        <li th:if="${book.addedBy.roles != 'ROLE_ADMIN'}" class="py-1">
+                                            <strong>Added by:</strong> <a th:href="@{'/user/' + ${book.addedBy.userName}}" th:text="|${book.addedBy.firstName} ${book.addedBy.lastName}|">Firstname Lastname</a>
+                                        </li>
+                                        <li class="py-1">
+                                            <strong>Publisher:</strong> <span th:text="${book.bookDetail.publisher}">{{book.bookDetail.publisher}}</span>
+                                        </li>
+                                        <li class="py-1">
+                                            <strong>Language:</strong> <span th:text="${book.bookDetail.language}">English</span>
+                                        </li>
+                                        <li class="py-1">
+                                            <strong>Page Count:</strong> <span th:text="|${book.bookDetail.pageCount} pages|">325 pages</span>
+                                        </li>
+                                        <li class="py-1">
+                                            <strong>Item Weight:</strong> <span th:text="|${book.bookDetail.itemWeight} pounds|">1.56 pounds</span>
+                                        </li>
+                                        <li class="py-1">
+                                            <div class="d-flex">
+                                                <div class="align-self-center">
+                                                    <strong>Avg. Rating:</strong>
+                                                    <span>Is logged in: {{authService.isLoggedIn()}}</span>
                                                 </div>
-                                            </li>
-                                            <li class="py-1">
-                                                <strong>Tags:</strong>
-                                                <span th:if="${not #lists.isEmpty(tags)}">
-                                                    <span th:each="tag : ${tags}" class="badge bg-custom-orange rounded-pill m-1">
-                                                        <a th:text="${tag}" class="text-decoration-none text-white" href="">Java</a>
-                                                    </span>
+                                                <div class="ps-2">
+                                                    <a th:if="${avgRating == 0}" class="text-warning fs-5 text-decoration-none" href="#reviews"><div th:replace="fragments/elements :: 0-star"></div></a>
+                                                    <a th:if="${avgRating >= 1 and avgRating < 2}" class="text-warning fs-5 text-decoration-none" href="#reviews"><div th:replace="fragments/elements :: 1-star"></div></a>
+                                                    <a th:if="${avgRating >= 2 and avgRating < 3}" class="text-warning fs-5 text-decoration-none" href="#reviews"><div th:replace="fragments/elements :: 2-star"></div></a>
+                                                    <a th:if="${avgRating >= 3 and avgRating < 4}" class="text-warning fs-5 text-decoration-none" href="#reviews"><div th:replace="fragments/elements :: 3-star"></div></a>
+                                                    <a th:if="${avgRating >= 4 and avgRating < 5}" class="text-warning fs-5 text-decoration-none" href="#reviews"><div th:replace="fragments/elements :: 4-star"></div></a>
+                                                    <a th:if="${avgRating == 5}" class="text-warning fs-5 text-decoration-none" href="#reviews"><div th:replace="fragments/elements :: 5-star"></div></a>
+                                                </div>
+                                                <span th:text="|(${avgRating})|" class="ps-2 align-self-center">(4.5)</span>
+                                            </div>
+                                        </li>
+                                        <li class="py-1">
+                                            <strong>Tags:</strong>
+                                            <span th:if="${not #lists.isEmpty(tags)}">
+                                                <span th:each="tag : ${tags}" class="badge bg-custom-orange rounded-pill m-1">
+                                                    <a th:text="${tag}" class="text-decoration-none text-white" href="">Java</a>
                                                 </span>
-                                            </li>
-                                        </ul>
+                                            </span>
+                                        </li>
+                                    </ul>
 
-                                    </div>
                                 </div>
                             </div>
                         </div>
