--- a/ui/src/app/home/home.component.html
+++ b/ui/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div id="app-body" class="bg-light">
+<div id="app-body" class="bg-light-custom">
     <div class="container">
     
         <router-outlet></router-outlet>
