--- a/ui/src/app/header/header.component.html
+++ b/ui/src/app/header/header.component.html
@@ -28,7 +28,7 @@
             <a *ngIf="!loggedIn" class="btn btn-primary " routerLink="/register">Register</a>
             <div *ngIf="loggedIn">
               <a class="btn btn-outline-secondary me-1" routerLink="/cart"><i class="bi bi-cart4"></i></a>
-              <a class="btn btn-outline-primary me-1"><i class="bi bi-person-circle"></i> My Profile</a>
+              <a class="btn btn-outline-primary me-1" [routerLink]="['/user', currentUsername]"><i class="bi bi-person-circle"></i> My Profile</a>
               <a *ngIf="isAdmin" class="btn btn-outline-primary me-2"><i class="bi bi-person-circle"></i> Admin Panel</a>
             </div>
             <div *ngIf="loggedIn">
