--- a/ui/src/app/home/my-profile/user-header/user-header.component.html
+++ b/ui/src/app/home/my-profile/user-header/user-header.component.html
@@ -5,13 +5,13 @@
     <div class="ps-sm-4 pt-2 text-center text-sm-start">
         <h2>
             <span>{{currentUser.firstName + ' ' + currentUser.lastName}}</span>
-            <span class="fst-italic fw-light">({{currentUser.username})</span>
+            <span class="fst-italic fw-light"> ({{currentUser.username}})</span>
         </h2>
         <div class="ps-sm-2 d-flex flex-column text-center text-sm-start">
             <small class="my-2 mb-0"></small>
 <!--            <small class="my-2">Books owned: 5</small>-->
             <small class="my-2 mb-1">Reviews made: 10</small>
-            <div th:with="loggedInUser=${'/user/'+ #authentication.name}">
+            <div *ngIf="!viewingOtherProfile">
                 <div class="" >
                     <small class="my-2">You have <span class="bg-warning rounded-3 ps-1 pe-1 fw-bold">{{userCreditBal | currency}}</span> store credits</small>
                 </div>
