--- a/ui/src/app/home/my-profile/profile-navigation/profile-navigation.component.html
+++ b/ui/src/app/home/my-profile/profile-navigation/profile-navigation.component.html
@@ -1,29 +1,29 @@
 <ul class="list-group text-start">
-    <a [routerLink]="['/user', currentUsername, 'my-reviews']" routerLinkActive="active active-custom" class="list-group-item list-group-item-action">
+    <a [routerLink]="['/user', currentLoggedInUsername, 'my-reviews']" routerLinkActive="active active-custom" class="list-group-item list-group-item-action">
         <i class="bi bi-pen me-1"></i>
         My reviews
     </a>
-    <a [routerLink]="['/user', currentUsername, 'my-books']" class="list-group-item list-group-item-action">
+    <a *ngIf="currentLoggedInUsername === currentUrlUsername" [routerLink]="['/user', currentLoggedInUsername, 'my-books']" routerLinkActive="active active-custom" class="list-group-item list-group-item-action">
         <i class="bi bi-book me-1"></i>
         My books
     </a>
-    <a [routerLink]="['/user', currentUsername, 'owned-books']" class="list-group-item list-group-item-action">
+    <a *ngIf="currentLoggedInUsername === currentUrlUsername" [routerLink]="['/user', currentLoggedInUsername, 'owned-books']" routerLinkActive="active active-custom" class="list-group-item list-group-item-action">
         <i class="bi bi-journal-arrow-down me-1"></i>
         Owned books
     </a>
-    <a [routerLink]="['/user', currentUsername, 'edit-profile']" class="list-group-item list-group-item-action">
+    <a *ngIf="currentLoggedInUsername === currentUrlUsername" [routerLink]="['/user', currentLoggedInUsername, 'edit-profile']" routerLinkActive="active active-custom" class="list-group-item list-group-item-action">
         <i class="bi bi-pencil-square me-1"></i>
         Edit profile
     </a>
-    <a [routerLink]="['/user', currentUsername, 'orders']" class="list-group-item list-group-item-action">
+    <a *ngIf="currentLoggedInUsername === currentUrlUsername" [routerLink]="['/user', currentLoggedInUsername, 'my-orders']" routerLinkActive="active active-custom" class="list-group-item list-group-item-action">
         <i class="bi bi-box-seam me-1"></i>
         Orders
     </a>
-    <a [routerLink]="['/user', currentUsername, 'exchanges']" class="list-group-item list-group-item-action">
+    <a *ngIf="currentLoggedInUsername === currentUrlUsername" [routerLink]="['/user', currentLoggedInUsername, 'exchanges']" routerLinkActive="active active-custom" class="list-group-item list-group-item-action">
         <i class="bi bi-arrow-left-right me-1"></i>
         Exchanges
     </a>
-    <a [routerLink]="['/user', currentUsername, 'book-submissions']" class="list-group-item list-group-item-action">
+    <a *ngIf="currentLoggedInUsername === currentUrlUsername" [routerLink]="['/user', currentLoggedInUsername, 'book-submissions']" routerLinkActive="active active-custom" class="list-group-item list-group-item-action">
         <i class="bi bi-file-earmark-plus me-1"></i>
         Book submissions
     </a>
