--- a/ui/src/app/header/header.component.html
+++ b/ui/src/app/header/header.component.html
@@ -27,7 +27,13 @@
             <a *ngIf="!loggedIn" class="btn btn-primary me-2" routerLink="/login">Login</a>
             <a *ngIf="!loggedIn" class="btn btn-primary " routerLink="/register">Register</a>
             <div *ngIf="loggedIn">
-              <a class="btn btn-outline-secondary me-1" routerLink="/cart"><i class="bi bi-cart4"></i></a>
+              <a class="btn btn-outline-secondary me-1 position-relative" routerLink="/cart">
+                <i class="bi bi-cart4"></i>
+                <span class="position-absolute top-0 start-0 translate-middle badge rounded-pill bg-custom-orange">
+                  {{cartItems}}
+                  <span class="visually-hidden">cartitems</span>
+                </span>
+              </a>
               <a class="btn btn-outline-primary me-1" [routerLink]="['/user', currentUser.username]"><i class="bi bi-person-circle"></i> My Profile</a>
               <a *ngIf="isAdmin" class="btn btn-outline-primary me-2"><i class="bi bi-person-circle"></i> Admin Panel</a>
             </div>
