ui - add book exchanges

--- a/ui/src/app/home/my-profile/my-orders/my-orders.component.html
+++ b/ui/src/app/home/my-profile/my-orders/my-orders.component.html
@@ -35,7 +35,7 @@
                         </td>
                         <td>{{order.createdAt | date:'dd MMMM yyyy hh:mm a'}}</td>
                         <td class="text-center">
-                            <a *ngIf="order.status === 'PAID'" class="btn btn-sm btn-outline-dark" title="View order" [href]="order.receiptUrl" target="_blank">View</a>
+                            <a *ngIf="order.status === 'PAID' && order.paymentType === 'CARD'" class="btn btn-sm btn-outline-dark" title="View order" [href]="order.receiptUrl" target="_blank">View</a>
                         </td>
                     </tr>
                     <tr *ngIf="orders.length === 0" class="text-center">
